# sub-verse-chronicles

./: .gitignore  README.md
.github/workflows/: android-build.yml  download-assets.yml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: CREDITS.txt
android/app/src/main/assets/story/: chapter1.vns
android/app/src/main/java/in/sub/unit/subverse/: DialogueOverlay.kt  GameRenderer.kt  GameSurfaceView.kt  MainActivity.kt  NativeEngine.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/: ARCHITECTURE.md  GAME_DESIGN.md
engine/: CMakeLists.txt
engine/include/: asset_manager.h  dialogue_system.h  engine.h  image_loader.h  input_manager.h  logger.h  renderer_gles3.h  sprite_renderer.h  story_manager.h  texture.h
engine/src/: asset_manager.cpp  dialogue_system.cpp  engine.cpp  image_loader.cpp  input_manager.cpp  jni_entry.cpp  main.cpp  renderer_gles3.cpp  sprite_renderer.cpp  story_manager.cpp  texture.cpp
